<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:onClick="goBack"
        android:background="@drawable/ic_round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />


    <TextView
        android:id="@+id/am_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_add_movie"
        android:textColor="?attr/colorPrimary"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/am_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_fill_fields"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/am_sign"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/am_error">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tag_title"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/am_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rounded_bg"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:padding="10dp"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tag_orgTitle"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/am_orgTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rounded_bg"
                android:gravity="center_horizontal"
                android:hint="@string/hint_optional"
                android:singleLine="true"
                android:padding="10dp"
                android:text=""
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tag_year"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/am_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rounded_bg"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:singleLine="true"
                android:padding="10dp"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tag_director"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/am_dir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rounded_bg"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:padding="10dp"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/tag_producer"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/am_prod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_rounded_bg"
                android:gravity="center_horizontal"
                android:hint="@string/hint_optional"
                android:singleLine="true"
                android:padding="10dp"
                android:text=""
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="submit"
        android:text="@string/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="UsingOnClickInXml" />

    <ProgressBar
        android:id="@+id/am_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>