<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_image"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tag_pictures"
                android:textColor="?attr/colorPrimary"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/sm_ratePictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey"
            android:stepSize="1" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_plot"
                app:tint="?attr/colorPrimary"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tag_plot"
                android:textColor="?attr/colorPrimary"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/sm_ratePlot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:progressBackgroundTint="@color/grey"
            android:numStars="5"
            android:stepSize="1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_group"
                app:tint="?attr/colorPrimary"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tag_cast"
                android:textColor="?attr/colorPrimary"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/sm_rateCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:progressBackgroundTint="@color/grey"
            android:numStars="5"
            android:stepSize="1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_music"
                app:tint="?attr/colorPrimary"/>

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/tag_audio"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="?attr/colorPrimary"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/sm_rateAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:progressBackgroundTint="@color/grey"
            android:numStars="5"
            android:stepSize="1" />

    </RelativeLayout>

</LinearLayout>